--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/dist
 
 # testing
 /coverage
@@ -17,7 +18,18 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*.local
 
+# log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs
+*.njsproj
+*.sln
+*.sw?
