--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.8.1",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "lodash": "^4.17.21",
+        "node-sass": "^7.0.1",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-bootstrap": "^2.1.1",
@@ -17,6 +20,7 @@
         "react-scripts": "5.0.0",
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.1",
+        "sass": "^1.49.7",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
